@@ -1,3 +1,11 @@
+2016-09-10  Paul Thomas  <pault@gcc.gnu.org>
+	    Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/77532
+	^ interface.c (check_dtio_arg_TKR_intent): Return after error.
+	(check_dtio_interface1): Remove asserts, test for NULL and return
+	if found.
+
 2016-09-09  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/77420
